// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtilityText applies small styles 1`] = `
.c0 {
  color: #7E7E7E;
  font-size: 0.75rem;
  margin: 0 0 1em;
  text-transform: uppercase;
}

<div>
  <div
    class="c0"
  >
    Utility Text
  </div>
</div>
`;

exports[`UtilityText matches default snapshot 1`] = `
.c0 {
  color: #7E7E7E;
  font-size: 1rem;
  margin: 0 0 1em;
  text-transform: uppercase;
}

<div>
  <div
    class="c0"
  >
    Utility Text
  </div>
</div>
`;
